<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:minWidth="400dp"
              android:layout_height="match_parent"
              android:paddingRight="24dp"
              android:paddingBottom="16dp"
              android:paddingTop="8dp"
              android:paddingLeft="24dp"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running_average_desc"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_raw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_raw"/>

        <RadioButton
            android:id="@+id/radio_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_5"/>

        <RadioButton
            android:id="@+id/radio_ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_10"/>

        <RadioButton
            android:id="@+id/radio_hundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_100"/>

    </RadioGroup>


    <Button
        android:id="@+id/touch_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn_done"/>


</LinearLayout>